# build

./: .gitignore  .next 2  README.md  SETUP-AUTH-BILLING.md  drizzle.config.ts  package-lock.json  package.json  proxy.ts  skills-lock.json  test.json
EnvironmentAdi/: .gitignore  DELIVERABLES.md  README.md  pyproject.toml  run_finish.sh  run_gemma.sh  run_overnight.sh  run_real.sh
EnvironmentAdi/dashboard/: index.html
EnvironmentAdi/environmentadi/: __init__.py  artifacts.py  benchception.py  benchception_v3.py  builder.py  capture.py  config.py  orchestrate.py  run_benchception.py  scoring.py  spec.py  tournament.py  train.py  train2.py  train3.py  train_run.py
EnvironmentAdi/environmentadi/backends/: __init__.py  base.py  hud.py  mock.py
EnvironmentAdi/environmentadi/prompts/: builder_system.md
EnvironmentAdi/golden/sc_bench/: Dockerfile.hud  env.py  pyproject.toml  sc_bench_env.py  tasks.py
EnvironmentAdi/golden/sc_bench/data/: CancellationContext.csv  ErrorLogs.csv  FulfillmentOrders.csv  TradeOrders.csv  WarehouseOrders.csv  tool_use_answers.jsonl  tool_use_question.jsonl
EnvironmentAdi/presentation/: index.html
EnvironmentAdi/specs/: letter_count.json  sentiment.json  sql_lookup.json  supchain_bench.json
EnvironmentAdi/tests/: test_mock_tournament.py
backend/: .dockerignore  Dockerfile  bridge_log.py  deploy_one.py  eval_one.py  hud_cli.py  job_traces.py  pyproject.toml  run_taskset.py  server.py  sync_tasks.py  train_one.py
backend/.hud/: config.json
backend/examples/: demo_project.json  project_v1.json  test.json
backend/synth/: README.md  __init__.py  contracts.py
backend/synth/compile/: __init__.py  assemble_env.py  cli.py  contributors.py  deploy.py  ir.py  registry.py
backend/synth/eval/: __init__.py  baseline.py  cli.py
backend/synth/registry/: __init__.py  cli.py  server.py  store.py
backend/synth/tasks/: __init__.py  adapt.py  cli.py  grade.py  llm.py  smoke.py  spec.py  synthesizer.py
backend/synth/tools/: __init__.py  assemble.py  cli.py  extract.py  gateway.py  llm.py  match.py  smoke.py  synthesizer.py  templates.py  world.py
backend/synth/train/: __init__.py  cli.py  loop.py
backend/tests/: test_baseline.py  test_compile.py  test_registry.py  test_schema_robustness.py  test_tasks.py  test_tasks_robustness.py  test_tools.py  test_train.py
drizzle/: 0000_brown_chamber.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: auth.ts
src/app/: globals.css  layout.tsx  page.tsx
src/db/: index.ts  schema.ts
(+59 files in other folders)
