[project]
name = "rl-scratch-backend"
version = "0.1.0"
description = "RL Scratch backend: synthesizers that turn an env spec into a runnable HUD environment"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "fastmcp>=2.0",
    "hud-python>=0.6",
    "openai>=1.40",
]

[project.scripts]
synth-tools = "synth.tools.cli:main"
synth-tasks = "synth.tasks.cli:main"
synth-env = "synth.compile.cli:main"
synth-eval = "synth.eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synth"]

[tool.pytest.ini_options]
pythonpath = ["."]
