[project]
name = "rl-scratch-backend"
version = "0.1.0"
description = "RL Scratch backend: synthesizers that turn an env spec into a runnable HUD environment"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "fastmcp>=2.0",
    "hud-python>=0.6",
    "openai>=1.40",
]

[project.scripts]
# Active pipeline surface — steps 1-6 (validate → tools → tasks → compile → deploy → baseline).
synth-tools = "synth.tools.cli:main"      # steps 1-2
synth-tasks = "synth.tasks.cli:main"      # step 3
synth-env = "synth.compile.cli:main"      # steps 4-5 (compile + --deploy)
synth-eval = "synth.eval.cli:main"        # step 6 (baseline)
# Steps 7-8 are intentionally ISOLATED for now (front-end integration first). The code is kept
# under synth/train/ and synth/registry/ (and their tests); re-enable by restoring these entries:
#   synth-train = "synth.train.cli:main"        # step 7 (training)
#   synth-registry = "synth.registry.cli:main"  # step 8 (registry + dashboard)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synth"]

[tool.pytest.ini_options]
pythonpath = ["."]
